--- a/UnitTests/Common.UnitTests/Common.UnitTests.csproj
+++ b/UnitTests/Common.UnitTests/Common.UnitTests.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common.UnitTests\" />
+    <Folder Include="Logging.UnitTests\" />
+  </ItemGroup>
+
 </Project>
